parser/sample_tests/ours/simple.txt

*** Error line 2.
  Print("hello world");
  ^^^^^
*** syntax error

